<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.Capture">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/capture_head"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/capture_start_up"
        android:id="@+id/capture_startup"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/capture_stop_up"
        android:id="@+id/capture_stopup"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/capture_startup"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/capture_start_rec"
        android:id="@+id/capture_startrec"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/capture_stopup"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/capture_pause_rec"
        android:id="@+id/capture_pauserec"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/capture_startrec"
        android:layout_alignParentLeft="true"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/capture_stop_rec"
        android:id="@+id/capture_stoprec"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/capture_pauserec"
        android:layout_alignParentLeft="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/capture_status"
        android:id="@+id/textView6"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/capture_playrec"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture_play"
        android:id="@+id/capture_playrec"
        android:layout_below="@+id/capture_stoprec"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView6"
        android:layout_alignEnd="@+id/textView6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture_stop_play"
        android:id="@+id/capture_stop_play"
        android:layout_below="@+id/capture_playrec"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <VideoView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/capture_play_video"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
