<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.Home"
    android:background="@color/btn_sign">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/home_head"
        android:id="@+id/home_welcome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_button_contacts"
        android:id="@+id/home_contacts"
        android:layout_marginTop="73dp"
        android:layout_below="@+id/home_welcome"
        android:layout_alignLeft="@+id/home_welcome"
        android:layout_alignStart="@+id/home_welcome"
        android:textColor="@color/bg_home"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_button_capture"
        android:id="@+id/home_capture"
        android:layout_below="@+id/home_contacts"
        android:layout_toLeftOf="@+id/home_pause"
        android:textColor="@color/bg_home"
        android:layout_toStartOf="@+id/home_pause" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_button_help"
        android:id="@+id/home_help"
        android:layout_below="@+id/home_contacts"
        android:layout_toRightOf="@+id/home_pause"
        android:layout_toEndOf="@+id/home_pause"
        android:textColor="@color/bg_home"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_button_settings"
        android:id="@+id/home_settings"
        android:layout_below="@+id/home_pause"
        android:layout_centerHorizontal="true"
        android:textColor="@color/bg_home"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_button_pause_all"
        android:id="@+id/home_pause"
        android:layout_below="@+id/home_contacts"
        android:layout_alignLeft="@+id/home_contacts"
        android:layout_alignStart="@+id/home_contacts"
        android:textColor="@color/bg_home"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/home_alert"
        android:layout_below="@+id/home_settings"
        android:layout_marginTop="62dp"
        android:textColor="@color/bg_home"
        android:background="@drawable/alarm"
        android:layout_toStartOf="@+id/home_help"
        android:layout_toLeftOf="@+id/home_help" />
</RelativeLayout>
