<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.Login"
    android:background="@color/bg_main">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/login_head"
            android:id="@+id/textView"
            android:textColor="@color/white"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:weightSum="1"
        android:layout_below="@+id/textView"
        android:layout_marginTop="41dp">

        <EditText
            android:layout_width="275dp"
            android:layout_height="90px"
            android:padding="@dimen/input_hint"
            android:inputType="textEmailAddress"
            android:ems="5"
            android:id="@+id/login_email"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@color/white"
            android:hint="@string/login_email" />

        <EditText
            android:layout_width="274dp"
            android:layout_height="90px"
            android:padding="@dimen/input_hint"
            android:inputType="textPassword"
            android:ems="5"
            android:id="@+id/login_pswd"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:password="true"
            android:background="@color/white"
            android:layout_below="@+id/login_email"
            android:layout_marginTop="30px"
            android:layout_alignRight="@+id/login_email"
            android:layout_alignEnd="@+id/login_email"
            android:hint="@string/login_password" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:id="@+id/login_enter"
            android:layout_marginTop="30px"
            android:layout_above="@+id/login_forgot"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/bg_main"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_forgot"
            android:id="@+id/login_forgot"
            android:layout_above="@+id/login_new"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/login_enter"
            android:layout_alignEnd="@+id/login_enter"
            android:textColor="@color/bg_main"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_new"
            android:id="@+id/login_new"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/login_forgot"
            android:layout_alignEnd="@+id/login_forgot"
            android:textColor="@color/bg_main"/>
    </LinearLayout>
</RelativeLayout>
