<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.Forgot"
    android:background="@color/bg_register">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/forgot_head"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/white"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_below="@+id/textView10"
        android:layout_marginTop="28dp">


        <EditText
            android:layout_width="fill_parent"
            android:layout_height="@dimen/input_height"
            android:padding="@dimen/input_hint"
            android:background="@color/bg_main"
            android:inputType="numberSigned"
            android:ems="10"
            android:hint="@string/forgot_otp"
            android:id="@+id/forgot_otp"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="42dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:backgroundTint="@color/white"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_validate"
            android:id="@+id/forgot_reset"
            android:layout_below="@+id/forgot_otp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/forgot_otp"
            android:layout_alignEnd="@+id/forgot_otp"
            android:layout_marginTop="@dimen/input_margin"
            android:textColor="@color/bg_register"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_resend"
            android:id="@+id/forgot_resend"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/bg_register"
            android:visibility="invisible"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_login"
            android:id="@+id/forgot_back_login"
            android:textColor="@color/bg_register"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</RelativeLayout>
