<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.Contacts">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/contact_head"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_add_new"
        android:id="@+id/contact_add_but"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_delete"
        android:id="@+id/contact_del_but"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/contact_add_but"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/contact_add_but"
        android:layout_alignEnd="@+id/contact_add_but" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_update"
        android:id="@+id/contact_upd_but"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/contact_del_but"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/contact_del_but"
        android:layout_alignEnd="@+id/contact_del_but" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contacts_lv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/contact_upd_but" />

</RelativeLayout>
