<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vgilanza.app.vigilanza.activity.AddContact">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/add_contact_name"
        android:ems="10"
        android:id="@+id/add_contact_name"
        android:layout_marginTop="85dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/add_contact_no"
        android:ems="10"
        android:id="@+id/add_contact_no"
        android:layout_below="@+id/add_contact_name"
        android:layout_alignLeft="@+id/add_contact_name"
        android:layout_alignStart="@+id/add_contact_name" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_contact_but"
        android:id="@+id/add_contact_but"
        android:layout_below="@+id/add_contact_no"
        android:layout_alignLeft="@+id/add_contact_no"
        android:layout_alignStart="@+id/add_contact_no"
        android:layout_alignRight="@+id/add_contact_no"
        android:layout_alignEnd="@+id/add_contact_no" />
</RelativeLayout>
